# mockers

./: .travis.yml  Cargo.toml  README.md  publish.sh  test.sh
doc/: guide.md  whats-new.md
examples/air_codegen/: Cargo.toml  build.rs
examples/air_codegen/src/: lib.rs  tests.rs  types.in.rs
examples/air_macro/: Cargo.toml
examples/air_macro/src/: lib.rs
examples/air_macro/src/context/: mod.rs
examples/air_macros11/: Cargo.toml
examples/air_macros11/src/: lib.rs  tests.rs
examples/air_proc_macro/: Cargo.toml
examples/air_proc_macro/src/: lib.rs  tests.rs
mockers/: Cargo.toml
mockers/src/: box_fn.rs  cardinality.rs  clone.rs  colors.rs  dbg.rs  lib.rs  type_info.rs
mockers/src/matchers/: ext.rs  mod.rs  option.rs  result.rs
mockers/tests/: arbitrary_self.rs  associated_types.rs  cardinality.rs  clone.rs  derive.rs  dyn_trait.rs  expect_in_action.rs  extern.rs  extern_trait.rs  fn_mut_reaction.rs  generic_method.rs  generic_trait.rs  lib.rs  matchers.rs  move.rs  multi_trait.rs  named_mock_type.rs  nested.rs  refs.rs  static_methods.rs  type_names.rs  type_param_bounds.rs
mockers_codegen/: Cargo.toml  build.rs
mockers_codegen/src/: lib.in.rs  lib.rs  lib.rs.in
mockers_derive/: Cargo.toml  test.rs
mockers_derive/src/: codegen.rs  debug.rs  diagnostics.rs  error.rs  id_gen.rs  lib.rs  options.rs  syn_utils.rs  type_manip.rs  util.rs
mockers_derive/tests/: mod.rs
mockers_derive/tests/compile-fail/: assoc_type_bound.rs  assoc_type_bound.stderr  derive_duplicate_item.rs  derive_duplicate_item.stderr  derive_invalid_item.rs  derive_invalid_item.stderr  derive_unknown_trait.rs  derive_unknown_trait.stderr  extern_block_name.rs  extern_block_name.stderr  extern_method.rs  extern_method.stderr  lifetime_params.rs  lifetime_params.stderr  lifetime_trait_parameter.stderr  mocked_struct.rs  mocked_struct.stderr  parametrized_trait.rs  parametrized_trait.stderr  parent_ref.rs  parent_ref.stderr  unresolved_parent_ref.rs  unresolved_parent_ref.stderr  unsafe_method.rs  unsafe_method.stderr  unsafe_trait.rs  unsafe_trait.stderr  where_clause.rs  where_clause.stderr
mockers_derive/tests/compile-warn/: derive_duplicate_trait.rs
mockers_macros/: Cargo.toml
mockers_macros/src/: lib.rs
scripts/: publish
src/: lib.rs  matchers.rs
src/matchers/: ext.rs  mod.rs  option.rs  result.rs
tests/: derive.rs  lib.rs  matchers.rs  nested.rs
