[package]
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
name = "mockers"
description = "Mocking library"
version = "0.1.0"
repository = "https://github.com/kriomant/mockers"
keywords = ["mock", "test"]
readme = "README.md"
license = "MIT"

[lib]
name = "mockers"

[dev-dependencies]
mockers_macros = "0.1.0"
