[package]
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
name = "mockers"
description = "Mocking library"
version = "0.2.0"
repository = "https://github.com/kriomant/mockers"
keywords = ["mock", "test"]
readme = "README.md"
license = "MIT"

[lib]
name = "mockers"

[dev-dependencies]
mockers_macros = "0.2.0"
