[workspace]
members = [
	"mockers", "mockers_codegen", "mockers_derive", "mockers_macros",
	"examples/air_macro", "examples/air_codegen",
]

[replace]
"mockers:0.5.8" = { path = "mockers" }
"mockers_codegen:0.5.8" = { path = "mockers_codegen" }
"mockers_macros:0.5.8" = { path = "mockers_macros" }
"mockers_derive:0.5.8" = { path = "mockers_derive" }
