[package]
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
name = "mockers"
description = "Mocking library"
version = "0.10.1"
repository = "https://github.com/kriomant/mockers"
documentation = "https://github.com/kriomant/mockers/blob/0.10.1/README.md"
keywords = ["mock", "test"]
readme = "../README.md"
license = "MIT"

[lib]
name = "mockers"

[dev-dependencies]
mockers_derive = { version = "0.10.1", path = "../mockers_derive" }

[features]
default = ["nightly"]
nightly = []
debug = ["mockers_derive/debug"]
