[package]
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
name = "mockers"
description = "Mocking library"
version = "0.11.0"
repository = "https://github.com/kriomant/mockers"
documentation = "https://github.com/kriomant/mockers/blob/0.11.0/README.md"
keywords = ["mock", "test"]
readme = "../README.md"
license = "MIT"

[lib]
name = "mockers"

[dev-dependencies]
mockers_derive = { version = "0.11.0", path = "../mockers_derive" }

[features]
debug = ["mockers_derive/debug"]
