[package]
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
name = "mockers"
description = "Mocking library"
version = "0.21.0"
repository = "https://github.com/kriomant/mockers"
documentation = "https://github.com/kriomant/mockers/blob/0.21.0/README.md"
keywords = ["mock", "test"]
readme = "../README.md"
license = "MIT"
edition = "2018"

[lib]
name = "mockers"

[dependencies]
itertools = "0.8.0"

[dev-dependencies]
mockers_derive = { version = "0.21.0", path = "../mockers_derive" }

[features]
debug = ["mockers_derive/debug"]
nightly = ["mockers_derive/nightly"]

[[test]]
name = "generic_method"
path = "tests/generic_method.rs"
required-features = ["nightly"]
