[package]
name = "mockers_codegen"
version = "0.9.3"
description = "Compiler plugin for 'mockers' mocking library"
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
repository = "https://github.com/kriomant/mockers"
keywords = ["mock", "test"]
license = "MIT"

build = "build.rs"

[features]

# In default configuration codegen uses nightly Rust compiler internals.
# This configuration is used by `mockers_macro` compiler plugin and it
# works with nightly Rust only.
default = []

# Show generated code.
debug = []

[dependencies]
itertools = "0.4.13"

[lib]
name = "mockers_codegen"
