[package]
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
description = "Macro 1.1 implementation for 'mockers' mocking library"
keywords = ["mock", "test"]
license = "MIT"
name = "mockers_derive"
repository = "https://github.com/kriomant/mockers"
version = "0.13.2"
edition = "2018"

[dependencies]
syn = { version = "0.15.24", features = ["full", "extra-traits"] }
quote = "0.6.10"
itertools = "0.4.13"
lazy_static = "0.2.9"
proc-macro2 = { version = "0.4.24", features = ["nightly"] }
indoc = "0.3.3"

[build-dependencies]

[dev-dependencies]
mockers = { version = "0.13.2", path = "../mockers" }
trybuild = "1.0.2"

[lib]
name = "mockers_derive"
proc-macro = true

[features]
debug = []
nightly = []
