[package]
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
description = "Macro 1.1 implementation for 'mockers' mocking library"
keywords = ["mock", "test"]
license = "MIT"
name = "mockers_derive"
repository = "https://github.com/kriomant/mockers"
version = "0.22.0"
edition = "2018"

[dependencies]
syn = { version = "0.15.24", features = ["full", "extra-traits"] }
proc-quote = "0.2.2"
itertools = "0.4.13"
lazy_static = "1.4.0"
proc-macro2 = { version = "0.4.24", features = ["nightly"] }
indoc = "0.3.3"

rustfmt-nightly = { version = "1.2.2", optional = true }

[build-dependencies]

[dev-dependencies]
mockers = { version = "0.22.0", path = "../mockers" }
trybuild = "1.0.33"

[lib]
name = "mockers_derive"
proc-macro = true

[features]
debug = []
debug-rustfmt = ["rustfmt-nightly"]
nightly = []
