[package]
name = "mockers_macros"
version = "0.5.3"
description = "Compiler plugin for 'mockers' mocking library"
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
repository = "https://github.com/kriomant/mockers"
keywords = ["mock", "test"]
license = "MIT"

[dependencies]
mockers_codegen = "0.5.3"

[lib]
name = "mockers_macros"
plugin = true

[features]
debug = []

[replace]
"mockers_codegen:0.5.3" = { path = "../mockers_codegen" }
