[package]
name = "mockers_macros"
version = "0.5.6"
description = "Compiler plugin for 'mockers' mocking library"
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
repository = "https://github.com/kriomant/mockers"
keywords = ["mock", "test"]
license = "MIT"

[dependencies]
mockers_codegen = "0.5.6"

[lib]
name = "mockers_macros"
plugin = true

[features]
debug = ["mockers_codegen/debug"]
