[package]
name = "mockers_macros"
version = "0.9.3"
description = "Compiler plugin for 'mockers' mocking library"
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
repository = "https://github.com/kriomant/mockers"
keywords = ["mock", "test"]
license = "MIT"

[dependencies]
mockers_codegen = { version = "0.9.3", path = "../mockers_codegen" }

[lib]
name = "mockers_macros"
plugin = true

[features]
debug = ["mockers_codegen/debug"]
