[package]
name = "air_codegen"
description = "Example of using `mockers` crate with stable Rust using code generation"
version = "0.1.0"
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
build = "build.rs"
publish = false

[build-dependencies.mockers_codegen]
version = "0.6.2"
path = "../../mockers_codegen"
features = ["with-syntex"]

[dev-dependencies.mockers]
version = "0.6.2"
path = "../../mockers"
default-features = false
