[package]
name = "air_macro"
description = "Example of using `mockers` crate with nightly Rust plugin support"
version = "0.1.0"
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
publish = false

[dependencies]
mockers_macros = "0.5.2"

[dev-dependencies]
mockers = "0.5.2"

[replace]
"mockers_macros:0.5.2" = { path = "../../mockers_macros" }
"mockers:0.5.2" = { path = "../../mockers" }
