[package]
name = "air_macros11"
description = "Example of using `mockers` crate with 'macros 1.1' nightly Rust features"
version = "0.1.0"
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
publish = false

[dependencies]
mockers_derive = { version = "0.5.1", path = "../../mockers_derive" }

[dev-dependencies]
mockers = { version = "0.5.1", path = "../../mockers" }
