[package]
name = "air_macros11"
description = "Example of using `mockers` crate with 'macros 1.1' nightly Rust features"
version = "0.1.0"
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
publish = false

[dependencies]
mockers_derive = "0.5.2"

[dev-dependencies]
mockers = "0.5.2"

[replace]
"mockers_derive:0.5.2" = { path = "../../mockers_derive" }
"mockers:0.5.2" = { path = "../../mockers" }
