[package]
name = "air_proc_macro"
description = "Example of using `mockers` crate with 'procedural macro' nightly Rust feature"
version = "0.1.0"
authors = ["Mikhail Trishchenkov <kriomant@gmail.com>"]
publish = false

[dev-dependencies]
mockers = { version = "0.12.0", path = "../../mockers" }
mockers_derive = { version = "0.12.0", path = "../../mockers_derive" }
